@@ -1,3 +1,9 @@
+2004-04-20  Andrey Kiselev  <dron@remotesensing.org>
+
+	* tools/tiff2pdf.c: Fixed problem with unaligned access as per bug
+
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=555
+
 2004-04-14  Andrey Kiselev  <dron@remotesensing.org>
 
 	* libtiff/tif_write.c: Allow in-place updating of the compressed
